tests/bad/formatting_attr_no_args.oc
/// fail: Incorrect number of arguments for formatting attribute

[formatting]
struct Foo {
    x, y: i32
}

def main() => 0